--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -64,4 +64,4 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:    
   Upscribe:
-    +schema: stg_upscribe_dbthub
+    +schema: stg_upscribe
